--- a/config/database.yml
+++ b/config/database.yml
@@ -1,25 +1,19 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
-default: &default
-  adapter: sqlite3
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  timeout: 5000
+# Locally we use docker-compose to spin up a Percona instance, so this config reflects that
+_defaults: &defaults
+  adapter: mysql2
+  encoding: utf8
+  reconnect: false
+  username: root
+  host: localhost
 
 development:
-  <<: *default
-  database: db/development.sqlite3
+  <<: *defaults
+  database: vacation_api_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  <<: *default
-  database: db/test.sqlite3
+  <<: *defaults
+  database: vacation_api_test
 
-production:
-  <<: *default
-  database: db/production.sqlite3
